# GREP

./: CMakeLists.txt  readme.md
.github/workflows/: tests.yaml
include/: bitset.h  nfa.h  stack.h
lib/: bitset.c  nfa.c
misc/: ascii2TOKEN_gen.c
src/: grep.c
test/: bitset_test.c  nfa_test.c  stack_test.c
