cmake_minimum_required(VERSION 3.0)
project(GREP LANGUAGES C)
add_library(bitset STATIC lib/bitset.c)
if(EXISTS "${CMAKE_SOURCE_DIR}/test")
    enable_testing()
    add_executable(bitset_test test/bitset_test.c)
    target_link_libraries(bitset_test bitset)
    add_test(NAME bitset_test COMMAND bitset_test)
endif()
