cmake_minimum_required(VERSION 3.0)
project(GREP LANGUAGES C)
add_library(bitset STATIC lib/bitset.c)
add_library(nfa STATIC lib/nfa.c)
target_link_libraries(nfa bitset)
include_directories("${CMAKE_SOURCE_DIR}")
add_executable(ascii2TOKEN misc/ascii2TOKEN_gen.c)
add_executable(grep src/grep.c)
target_link_libraries(grep nfa)
if(EXISTS "${CMAKE_SOURCE_DIR}/test")
    enable_testing()
    add_executable(bitset_test test/bitset_test.c)
    add_executable(nfa_test test/nfa_test.c)
    add_executable(stack_test test/stack_test.c)
    target_link_libraries(bitset_test bitset)
    target_link_libraries(nfa_test nfa)
    add_test(NAME bitset_test COMMAND bitset_test)
    add_test(NAME stack_test COMMAND stack_test)
    # add_test(NAME nfa_test COMMAND nfa_test)
endif()
